kubernetes/apps/development/harbor/app/ingress-internal.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-internal
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - harbor.${SECRET_DOMAIN}
      secretName: harbor-ingress
  rules:
    - host: harbor.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor-core
                port:
                  number: 80
